--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,7 @@
     NODE_OPTION = "--max_old_space_size=4096"
 [context.master]
     command = "npm run build"
+[[redirects]]
+    from="/*"
+    to="/index.html"
+    status = 200
